@@ -46,7 +46,7 @@ def solaris_mem_to_kbytes(s):
         return saveint(s[:-1]) * 1024
 
 def inventory_solaris_mem_used(info):
-    return [(None, "memused_default_levels")]
+    return [(None, {})]
 
 def check_solaris_mem_used(_no_item, params, info):
     keys   = ['MemTotal', 'MemFree', 'SwapTotal', 'SwapFree']
@@ -60,12 +60,11 @@ def check_solaris_mem_used(_no_item, params, info):
     return check_memory(params, dict(zip(keys, values)))
 
 check_info['solaris_mem'] = {
-    "check_function"         : check_solaris_mem_used,
-    "inventory_function"     : inventory_solaris_mem_used,
-    "service_description"    : "Memory used",
-    "has_perfdata"           : True,
-    "group"                  : "memory",
-    "check_config_variables" : [ "mem_extended_perfdata" ],
-    "includes"               : [ "mem.include" ],
+    "check_function"          : check_solaris_mem_used,
+    "inventory_function"      : inventory_solaris_mem_used,
+    "service_description"     : "Memory used",
+    "has_perfdata"            : True,
+    "group"                   : "memory",
+    "default_levels_variable" : "memory_default_levels",
+    "includes"                : [ "mem.include" ],
 }
-
