@@ -41,6 +41,7 @@
     * 0324 hitachi_hnas_cifs: new check for the number of users using a CIFS share
     * 0455 hitachi_hnas_span: new check for Spans (Storage Pools) in Hitachi HNAS storage systems
     * 0445 mem.win: Allow time-averaging of values before applying levels...
+    * 0446 mem.used, solaris_mem: Introduce optional averaging of used memory...
     * 0103 FIX: services: Fixed bug with service inventory defined in main.mk...
     * 0299 FIX: borcade_mlx_fan: Prettified output, handling "other" state now
     * 0300 FIX: cisco_fru_power: Trying not to inventorize not plugged in FRUs...
